# Portfolio

./: pyproject.toml
core/templates/: contact.html  courses.html  footer.html  header.html  hero.html  index.html  intro.html  projects.html  projects_modals.html  skills.html  social.html
portfolio/: settings.py
